--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2014-1">
-                      Something <span class="heavy">NeXT</span>.
+                      What's <span class="heavy">NeXT</span>.
                     </a>
                   </h4>
                 </div>
                 <div id="2014-1" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>Stay tooned.</p>
+                    <p>Stay tuned, the revolution just may be televised.</p>
                   </div>
                 </div>
               </div>
@@ -86,17 +86,18 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2013-1">
-                      Built <span class="heavy">getROI</span> for Instagram.
+                      Made <span class="heavy">getROI</span> for Instagram.
                     </a>
                   </h4>
                 </div>
                 <div id="2013-1" class="panel-collapse collapse">
                   <div class="panel-body">
                     <p>Based on Gary Vaynerchuck's marketing-in-context philosophy, use the power of Instagram to find customers for your product. Search one of your product's keywords to find potential customers with the same interests and chat them up in the comments.</p>
-                    <p><a class="btn btn-primary" href="http://seanmeverett.com/getROI" role="button">Use getROI &raquo;</a></p>
+                    <p><a class="btn btn-primary" href="http://seanmeverett.com/getROI" role="button">Try getROI &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
+
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
@@ -109,6 +110,95 @@
                   <div class="panel-body">
                     <p>StoryApp's robotic wooden friend, Kiiy, records your voice over multiple photos and transforms them into an epic video. Kiiy understands your spoken words and your emotion from your tone of voice, automatically hashtagging your story with each word for it to be discovered by others.</p>
                     <p><a class="btn btn-primary" href="http://bit.ly/storyapp" role="button">Download StoryApp &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2013-3">
+                      Founded <span class="heavy">SuperKind</span> private equity group.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2013-3" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Act SuperKind and experience hope like it's the first time. A private equity group that scales traditionally unscalable businesses by adding technology, entertainment and marketing partnerships to our portfolio companies.</p>
+                    <p><a class="btn btn-primary" href="http://superkindgroup.com" role="button">Act SuperKind &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2013-4">
+                      Built <span class="heavy">Become A Builder</span> for learners.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2013-4" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>85-page eBook tutorial to build your idea into a product. I show you how to create the exact same thing that you see on the Become A Builder website. If we have the ability to learn, we have a responsibility to teach.</p>
+                    <p><a class="btn btn-primary" href="http://becomeabuilder.com" role="button">Become A Builder &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+            </div>  <!-- panel-group -->
+
+            <br><br>
+
+            <h2 class="heavy">2012</h2>
+            <div class="panel-group" id="accordion">
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2012-1">
+                      Filmed <span class="heavy">Trap Door City</span> trailer.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2012-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>We rented out a hand-built castle in upstate New York, filming the live action trailer of Trap Door City. During Adam & Luna epic journey, they build and use StoryApp's Kiiy to defeat the evil monster Rakasasha.</p>
+                    <p>Currently in post-production digital animation, sound leveling, and color balancing, along with full script writing.</p>
+                    <p><a class="btn btn-primary" href="mailto:sean@adamandluna.com" role="button">Contact for Details &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2012-2">
+                      Founded <span class="heavy">Adam & Luna</span>.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2012-2" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>We built a family, not a company, including an Ice Age Story Artist, Disney Concept Artist, Carnegie Mellon Robotics Engineer, Badgeville Engineer, and a Wal-Mart Actuary. Our goal is to build incredible products for everyday people with a unifying story at it's soul.</p>
+                    <p>Software + Hardware + Story</p>
+                    <p><a class="btn btn-primary" href="http://adamandluna.com" role="button">Meet Adam & Luna &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2012-3">
+                      Launched <span class="heavy">Plyfe's</span> gamified ad product.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2012-3" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>The place I first met the cofounder of Adam & Luna, we were a $1 million VC-backed web app that gave you points for your social media activity. The points were redeemed for real-world partner prizes like Louis Vuitton, Louboutins, and NYC Broadway Experience.</p>
+                    <p><a class="btn btn-primary" href="http://plyfe.com" role="button">Visit Plyfe &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
