--- a/index.html
+++ b/index.html
@@ -49,17 +49,21 @@
         ================================================== -->
         <div class="hero">
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6 col-md-offset-3">
               <div class="text-center">
                 <img class="center img-circle" src="img/seanmeverett.jpg">
+                <br><br>
+                <blockquote><p class="lead">When you fail so much that you forget what winning feels like, that's when you're ready to succeed.</p><small><cite title="Source Title">Sean M Everett</cite></small></blockquote>
               </div>  <!-- center -->
             </div>  <!-- col -->
           </div>  <!-- row -->
-        </div>
+        </div>  <!-- hero -->
 
         <div class="row">
           <div class="col-md-12">
             <h2 class="heavy">2014</h2>
+          </div>
+          <div class="col-md-9 col-md-offset-3">
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
                 <div class="panel-heading">
@@ -76,10 +80,16 @@
                 </div>
               </div>
             </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
 
-            <br><br>
+        <br><br>
 
+        <div class="row">
+          <div class="col-md-12">
             <h2 class="heavy">2013</h2>
+          </div>
+          <div class="col-md-9 col-md-offset-3">
             <div class="panel-group" id="accordion">
 
               <div class="panel panel-default">
@@ -102,7 +112,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2013-2">
-                      Launched <span class="heavy">StoryApp</span> on iOS for free.
+                      Launched <span class="heavy">StoryApp</span> for the iPhone.
                     </a>
                   </h4>
                 </div>
@@ -145,14 +155,18 @@
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
-
             </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
 
-            <br><br>
+        <br><br>
 
+        <div class="row">
+          <div class="col-md-12">
             <h2 class="heavy">2012</h2>
+          </div>
+          <div class="col-md-9 col-md-offset-3">
             <div class="panel-group" id="accordion">
-
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
@@ -202,12 +216,10 @@
                   </div>
                 </div>  <!-- panel-collapse -->
               </div>  <!-- panel-default -->
-
             </div>  <!-- panel-group -->
-
-
           </div>  <!-- col -->
         </div>  <!-- row -->
+
 
       </div> <!-- /container -->
       <br><br>
