finishing status bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     ================================================== -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/seanmeverett.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,13 +31,18 @@
       <div class="status-bar">
         <div class="row">
           <div class="col-xs-4 text-left">
-            <p class="small">AT&T</p>
+            <span class="tiny"><i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle"></i> <i class="fa fa-circle-o"></i></span> <span class="small">AT&T</span>
           </div>
           <div class="col-xs-4 text-center">
-            <p>Book of <span class="heavy">Sean.</span></p>
+            <span class="small">10:10 AM</span>
           </div>
           <div class="col-xs-4 text-right">
-            <p class="small">100%</p>
+            <span class="small"><i class="fa fa-location-arrow"></i> &nbsp 100%</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 text-center">
+            <h4 class="heavy">Book of Sean.</h4>
           </div>
         </div>
       </div>
