--- a/index.html
+++ b/index.html
@@ -176,6 +176,26 @@
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2012-0">
+                      Recorded <span class="heavy">Seanversations</span> podcasts.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2012-0" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>A weekly podcast series I recorded for iTunes.</p>
+                    <p>Interesting People Interacting with an Intellectual Clown</p>
+                    <p>DEFINITION</p>
+                    <p>sean-ver-sa-tion | noun</p>
+                    <p>a form of interactive, spontaneous communication between two or more people where one is following rules of etiquette and the other throws them out the clown car window</p>
+                    <p><a class="btn btn-primary" href="seanmeverett.com/seanversations.html" role="button">Listen in &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2012-1">
                       Filmed <span class="heavy">Trap Door City</span> trailer.
                     </a>
