--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <span class="small">10:10 AM</span>
           </div>
           <div class="col-xs-4 text-right">
-            <span class="small"><i class="fa fa-location-arrow"></i> &nbsp 100%</span>
+            <span class="small"><i class="fa fa-location-arrow"></i> &nbsp 97%</span>
           </div>
         </div>
         <div class="row">
@@ -69,7 +69,7 @@
           <div class="col-md-12">
             <h2 class="heavy">2014</h2>
           </div>
-          <div class="col-md-9 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3">
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
                 <div class="panel-heading">
@@ -95,7 +95,7 @@
           <div class="col-md-12">
             <h2 class="heavy">2013</h2>
           </div>
-          <div class="col-md-9 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3">
             <div class="panel-group" id="accordion">
 
               <div class="panel panel-default">
@@ -171,7 +171,7 @@
           <div class="col-md-12">
             <h2 class="heavy">2012</h2>
           </div>
-          <div class="col-md-9 col-md-offset-3">
+          <div class="col-md-6 col-md-offset-3">
             <div class="panel-group" id="accordion">
               <div class="panel panel-default">
                 <div class="panel-heading">
@@ -220,7 +220,7 @@
                 </div>
                 <div id="2012-2" class="panel-collapse collapse">
                   <div class="panel-body">
-                    <p>We built a family, not a company, including an Ice Age Story Artist, Disney Concept Artist, Carnegie Mellon Robotics Engineer, Badgeville Engineer, and a Wal-Mart Actuary. Our goal is to build incredible products for everyday people with a unifying story at it's soul.</p>
+                    <p>We built a family, not a company, including an Ice Age Story Artist, Disney Concept Artist, Carnegie Mellon Robotics Engineer, Badgeville Engineer, and a Wal-Mart Actuary. Our goal is to build incredible products for everyday people with a unifying story at its soul.</p>
                     <p>Software + Hardware + Story</p>
                     <p><a class="btn btn-primary" href="http://adamandluna.com" role="button">Meet Adam & Luna &raquo;</a></p>
                   </div>
