adding more content

--- a/index.html
+++ b/index.html
@@ -246,6 +246,248 @@
           </div>  <!-- col -->
         </div>  <!-- row -->
 
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2011</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-1">
+                      Became <span class="heavy">Plyfe's</span> Head of Product.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>I was charged with taking the alpha product and getting it ready for consumer lauch, then iterating on the product to make it more fun and engaging.</p>
+                    <p>Plyfe gave you points for your social media activity. Perform challenges, earn points and raffle tickets, win real world prizes and vacations.</p>
+                    <p>We had over 50,000 users one month after launch earning more than 210 million points.</p>
+                    <p><a class="btn btn-primary" href="http://plyfe.com" role="button">Gamify Your Company &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-2">
+                      Built <span class="heavy">Swingbyte</span> iPhone / iPad app.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-2" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>One of my friend was working with Russian missile scientists (you can't make this stuff up) to build a golf swing tracking app. They needed help designing and building the iPhone / iPad portion of their product and called me in to help.</p>
+                    <p>It was a hardware + software play and was recently featured in <a href="http://uncrate.com/stuff/swingbyte/">Uncrate</a> and many other publications.</p>
+                    <p><a class="btn btn-primary" href="http://www.swingbyte.com" role="button">Visit Swingbyte &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-3">
+                      Launched <span class="heavy">Design O'Clock</span> iPhone app.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-3" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Digital clocks are boring, so get creative. Dock your iPhone with a gorgeous Design O'Clock and spice things up.</p>
+                    <p>And if one clock just isn't enough, shop the built-in Clock Shop for custom-designed themes or suggest your own. We just might build it.</p>
+                    <p><a class="btn btn-primary" href="http://designoclockapp.com/" role="button">Get Design O'Clock for Free &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-4">
+                      Launched <span class="heavy">Weather Notifier</span> iPhone app.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-4" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>When we wake up we've got a million messages, need to get ready for work, and grab some breakfast before leaving the house. The last thing we want to do is open yet another app and wait for the weather to load.</p>
+                    <p>So, we built Weather Notifier iPhone ap to send you push notifications with the day's forecast.</p>
+                    <p><a class="btn btn-primary" href="http://weathernotifierapp.com" role="button">Get Weather Notifications &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-5">
+                      Graduated <span class="heavy">Chicago Booth's</span> business school.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-5" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Ranked the #1 business school in the country by Business Week in consecutive years, I completed an entire MBA curriculum in a record 2.5 years. I took classes during nights and weekends while working on a Fortune 1000 merger integration effort, running a startup and launching multiple digital products.</p>
+                    <p>My concentrations were in Entrepreneurship, Marketing, and Finance, but extending my knowledge of pricing theory, consumer behavior, and commercializing innovation was my main goal.</p>
+                    <p><a class="btn btn-primary" href="http://www.chicagobooth.edu" role="button">Learn About Booth &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2011-6">
+                      Built <span class="heavy">Confide</span> for anonymous sharing.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2011-6" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>I saw everyday people expressing their joys and pains on Facebook and Twitter, but I felt that there was something much deeper that people wanted to express but couldn't in a public forum.</p>
+                    <p>So I built Confide to be an outlet for that. In the first week people posted about rape, sexual molestation, racism, relationship problems, and suicide.</p>
+                    <p>I found out two years later that my mom had used this platform to potentially save a life. And that's the moment I realized what my life's work was. To build human things that help people.</p>
+                    <p><a class="btn btn-primary" href="http://confideapp.com" role="button">Confide Anonymously &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2010</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2010-1">
+                      Launched <span class="heavy">Evolyte Store</span> weekly deals.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2010-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>We negotiated a deal with Apple's wholesale distributor to offer us discounted iPads, MacBooks, and iPods for the 2010 holiday shopping season.</p>
+                    <p>We offered 1 deeply discounted Apple product per week and made $30,000 in reserved sales without any money spent on marketing.</p>
+                    <p>We were written about in various technology and Apple-related blogs.</p>
+                    <p>The store closed down after the holidays.</p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2009</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2009-1">
+                      Founded <span class="heavy">Evolyte</span> creative agency.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2009-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>We built apps to save time or make time fly. Our socially awkward social media savants turned work into our playtime.</p>
+                    <p>We concepted, designed, and engineered websites, animations, web apps and mobile apps for ourselves and brand name clients.</p>
+                    <p><a class="btn btn-primary" href="http://evolyte.com" role="button">Visit Evolyte &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2009-2">
+                      Launched <span class="heavy">Alpha 2.0 Challenge</span> for traders.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2009-2" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>The Alpha 2.0 Challenge pitted financial engineering experts against each other to develop the most profitable high-frequency trading algorithms. The winner was able to use our capital and infrastructure to run the algorithms.</p>
+                    <p><a class="btn btn-primary" href="http://bluestoneinvestment.com/" role="button">Visit BlueStone Investments &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2007</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2007-1">
+                      Founded <span class="heavy">BlueStone Investments</span>.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2007-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>A high-frequency algorithmic trading firm, we raised capital, traded our own internal algorithms, were colocated on the NASDAQ and ran on AWS as one of their first users.</p>
+                    <p><a class="btn btn-primary" href="http://bluestoneinvestment.com/" role="button">Visit BlueStone Investments &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2003</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2003-1">
+                      Graduated <span class="heavy">U of Iowa</span> with Math & Actuarial Science.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2003-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>Born and raised in Iowa, I transformed the work ethic my parents taught me into academic excellence, studying Mathematics & Actuarial Science at the University of Iowa.</p>
+                    <p>I passed two Actuarial professional examinations and had two internships with PwC during college and was recruited by the biggest names in the Insurance and Pension industries.</p>
+                    <p><a class="btn btn-primary" href="http://www.math.uiowa.edu/" role="button">Math at Iowa &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
 
       </div> <!-- /container -->
       <br><br>
@@ -259,7 +501,7 @@
         <div class="hidden-xs">
           <div class="row">
             <div class="col-xs-4">
-              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-2012</a>, 2011-1981</p>
+              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-1981</a></p>
               <p class="small text-muted">Building a machine indistinguishable from a human being.</p>
             </div>
             <div class="col-xs-4 col-xs-offset-4">
@@ -276,7 +518,7 @@
         <div class="visible-xs">
           <div class="row">
             <div class="col-xs-12">
-              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-2012</a>, 2011-1981</p>
+              <p>© Sean M Everett <a href="/">2014</a>, <a href="/2013">2013-1981</a></p>
               <ul class="list-inline">
                 <li><a href="http://twitter.com/seanmeverett">Thoughts</a></li>
                 <li><a href="http://seanmeverett.quora.com">Letters</a></li>
