adding older content

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2011-5">
-                      Graduated <span class="heavy">Chicago Booth's</span> business school.
+                      Graduated <span class="heavy">Chicago Booth's</span> MBA program.
                     </a>
                   </h4>
                 </div>
@@ -465,6 +465,62 @@
 
         <div class="row">
           <div class="col-md-12">
+            <h2 class="heavy">2005</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2005-1">
+                      Became <span class="heavy">Consultant</span> at Towers Watson.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2005-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>One of the fastest promoted people in the company's history, I went from Analyst to Consultant in 3 years. As one of 10 people in a 10,000 company, I was given the Chairman's Award for excellence in work quality and client relationships.</p>
+                    <p>As an incentive design consultant I worked for Wal-Mart, RadioShack, The Container Store, AT&T, SBC, Cingular Wireless, and Goldman Sachs to develop reward programs that gamified organizational compensation and performance management systems.
+                    <p><a class="btn btn-primary" href="http://www.towerswatson.com" role="button">Visit Towers Watson &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
+            <h2 class="heavy">2004</h2>
+          </div>
+          <div class="col-md-6 col-md-offset-3">
+            <div class="panel-group" id="accordion">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#2004-1">
+                      Became <span class="heavy">Store Manager</span> of Guess.
+                    </a>
+                  </h4>
+                </div>
+                <div id="2004-1" class="panel-collapse collapse">
+                  <div class="panel-body">
+                    <p>After 9/11 destroyed the economy, I was left to fall back on what I knew best:  retail.</p>
+                    <p>Managed P&L for a $5 million, 30-person team, increased fiscal 2004 Revenue (+25%, 9th in the company), and Net Income (+319%) from prior fiscal year, reduced payroll 14% from budget, amplified men’s department total sales to 12th in company from 96th, and nominated as one of 3 out of 350 stores for Store of the Year award.</p>
+                    <p><a class="btn btn-primary" href="http://www.guess.com" role="button">Shop at Guess &raquo;</a></p>
+                  </div>
+                </div>  <!-- panel-collapse -->
+              </div>  <!-- panel-default -->
+            </div>  <!-- panel-group -->
+          </div>  <!-- col -->
+        </div>  <!-- row -->
+
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-12">
             <h2 class="heavy">2003</h2>
           </div>
           <div class="col-md-6 col-md-offset-3">
@@ -473,7 +529,7 @@
                 <div class="panel-heading">
                   <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" href="#2003-1">
-                      Graduated <span class="heavy">U of Iowa</span> with Math & Actuarial Science.
+                      Graduated <span class="heavy">U of Iowa</span> BS Math & Actuarial Science.
                     </a>
                   </h4>
                 </div>
