minor copywriting edits

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12 text-center">
-            <h4 class="heavy">Book of Sean.</h4>
+            <h4 class="heavy">Story of Sean.</h4>
           </div>
         </div>
       </div>
@@ -410,6 +410,7 @@
                   <div class="panel-body">
                     <p>We built apps to save time or make time fly. Our socially awkward social media savants turned work into our playtime.</p>
                     <p>We concepted, designed, and engineered websites, animations, web apps and mobile apps for ourselves and brand name clients.</p>
+                    <p>Our clients ranged from $1 billion companies to professional athletes to new startups.</p>
                     <p><a class="btn btn-primary" href="http://evolyte.com" role="button">Visit Evolyte &raquo;</a></p>
                   </div>
                 </div>  <!-- panel-collapse -->
