updating profile photo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3">
               <div class="text-center">
-                <img class="center img-circle" src="img/seanmeverett.jpg">
+                <img class="center img-circle" src="img/seanmeverett.jpg" width="250">
                 <br><br>
                 <blockquote><p class="lead">When you fail so much that you forget what winning feels like, that's when you're ready to succeed.</p><small><cite title="Source Title">Sean M Everett</cite></small></blockquote>
               </div>  <!-- center -->
